Fix card z-index on hover

--- a/style.css
+++ b/style.css
@@ -69,6 +69,7 @@ button.new-book:active {
 
 .card:hover {
     scale: 1.1;
+    z-index: 1;
 }
 
 .card button,
